<resources>
    <string name="app_name">QuanLyKhachSan</string>
    <string name="home">Trang chủ</string>
    <string name="inputAcount">Nhập số điện thoại</string>
    <string name="inputPassword">Nhập mật khẩu</string>

    <string name="btnlogin">Đăng nhập</string>
    <string name="lblHotelName">Tên khách sạn</string>
    <string name="nameRoom">Phòng 002</string>
    <string name="lblname">Tên</string>
    <string name="lblPhone">SĐT</string>
    <string name="lblBokkingType">Đặt theo</string>
    <string name="lblPassport">CMND</string>
    <string name="radBookingday">Ngày</string>
    <string name="radBookingHours">Giờ</string>
    <string name="lblPrice">Giá</string>
    <string name="lblTimeBooking">Ngày Thuê</string>
    <string name="lblCheckInDay">Ngày nhận phòng</string>
    <string name="lblCheckoutDay">Ngày trả phòng</string>
    <string name="lblTotalDay">Số ngày thuê</string>
    <string name="lblTotalHours">Số Giờ thuê</string>
    <string name="lblOther">Other</string>
    <string name="lblMonyRoom">Tiền phòng</string>
    <string name="lblTotalMoney">Tổng tiền</string>
    <string name="hintTimeIn">Giờ đến</string>
    <string name="hintTimeOut">Giờ đi</string>
    <string name="hintSelect">Nhấn dể chọn</string>
    <string name="tvTenKhachSan">Tên khách sạn</string>
    <string name="tvGia">Giá Tiền</string>
    <string name="tvGioden">Giờ đến</string>
    <string name="tvGiodi">Giờ đi</string>
    <string name="tvDiaChiUp">Địa chỉ</string>
    <string name="tvDiaChiDown">Địa chỉ</string>
    <string name="tvNgayTra">Ngày trả</string>
    <string name="tvNgaydi">Ngày đi</string>
    <string name="lblNumberPhone">Số điện thoại</string>
    <string name="lblDiachi">Địa chỉ</string>
    <string name="lblEmail">Email</string>
    <string name="lblFullName">Họ Và tên</string>
    <string name="lblSelect">Chọn phòng</string>
    <string name="lblNAmeHotel">Tên khách sạn</string>
    <string name="lblLuotDat">100 Lượt Đặt</string>
    <string name="lblPriceBoookingday">Giá theo ngày: </string>
    <string name="lblPriceBookingHours">Giá theo giờ: </string>
    <string name="lblNoAcount">Chưa có tài khoản</string>
    <string name="lblRegistration"> Đăng ký</string>
    <string name="wrongPassword">Sai tài khoản hoặc mật khẩu</string>
    <string name="lblLogOut">Đăng xuất</string>
    <string name="toatsExit">Nhấn lần nữa để thoát</string>
    <string name="btnCancel">Hủy</string>
    <string name="btnConfirm">Xác nhận</string>
    <string name="btnPayMoney">Thanh toán</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>