<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:text="QLKS"
            android:textStyle="bold"
            android:textSize="100px"/>

    </LinearLayout>

    <LinearLayout style="@style/editTextAcount">

        <EditText
            style="@style/inputText"

            android:hint="@string/inputAcount"></EditText>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/inputText"
                android:imeOptions="actionDone"
                android:hint="@string/inputPassword"
                android:id="@+id/etPassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center_horizontal">
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/btnlogin" />
       </LinearLayout>
    </LinearLayout>


</LinearLayout>